--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,21 @@
 language: python
+planguage: python
 python:
   - "3.6"
-  - "3.6.0"  
- 
-
-install:
+install: 
   - pip install -r requirements.txt
+  - pip install flask-restful
+  - pip install flask-jwt-extended
+  - pip install coverals
+  - pip install codeclimate-test-reporter
+  - pip install pytest pytest-cov
 
-# blaclklist
-branches:
-  except:
-    - feature
-    - develope
+before_script:
+  - set config=development
+  - export SECRET_KEY=@#$%^&*()
 
-# whitelist
-branches:
-  only:
-    -f1
-    -master
+script: pytest --cov=./
 
-script:
-  - pytest
+after_success:
+  -coveralls
+  -codeclimate-test-reporter
