--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
 aniso8601==3.0.2
+asn1crypto==0.24.0
+astroid==1.6.5
 atomicwrites==1.1.5
 attrs==18.1.0
+cffi==1.11.5
 click==6.7
 colorama==0.3.9
+cryptography==1.9
 Flask==1.0.2
+Flask-JWT-Extended==3.10.0
 Flask-RESTful==0.3.6
+gunicorn==19.8.1
+idna==2.7
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+jwt==0.5.3
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 more-itertools==4.2.0
 pluggy==0.6.0
 py==1.5.3
+pycparser==2.18
+PyJWT==1.6.4
+pylint==1.9.2
 pytest==3.6.2
 pytz==2018.4
 six==1.11.0
 Werkzeug==0.14.1
+wrapt==1.10.11
