--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cryptography==1.9
 Flask==1.0.2
 Flask-JWT-Extended==3.10.0
 Flask-RESTful==0.3.6
+gunicorn==19.8.1
 idna==2.7
 isort==4.3.4
 itsdangerous==0.24
