--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ install:
   - pip install codeclimate-test-reporter
   - pip install pytest pytest-cov
 
+services:
+  - postgresql
 before_script:
   - set config=development
+  - psql -c "CREATE ROLE postgres WITH SUPERUSER LOGIN PASSWORD '6398litein';" -U postgres
+  - psql -c "CREATE DATABASE tester;" -U postgres
 
 script: pytest --cov=./
 
